[gd_scene load_steps=9 format=3 uid="uid://dj28dgdcm73u3"]

[ext_resource type="Script" path="res://scenes/enemy/enemy.gd" id="1_mijho"]
[ext_resource type="Texture2D" uid="uid://b240mrtpthxpe" path="res://assets/forest-assets/characters.png" id="2_dafn4"]
[ext_resource type="Script" path="res://scenes/weapon/projectile_spawner.gd" id="3_qbmce"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xkvac"]
atlas = ExtResource("2_dafn4")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_82tmd"]
atlas = ExtResource("2_dafn4")
region = Rect2(32, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gsyr7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkvac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82tmd")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qb42n"]
radius = 7.0
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_13rw7"]
radius = 85.0059

[node name="Enemy" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 2
collision_mask = 5
script = ExtResource("1_mijho")
health = 40

[node name="EnemySprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_gsyr7")
animation = &"attack"
frame = 1
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_qb42n")

[node name="PlayerCheck" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCheck"]
shape = SubResource("CircleShape2D_13rw7")

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="ProjectileSpawner" type="Node2D" parent="."]
position = Vector2(11, -8)
script = ExtResource("3_qbmce")
projectile_path = "res://scenes/weapon/projectile_weapon.tscn"

[connection signal="body_entered" from="PlayerCheck" to="." method="_on_player_check_body_entered"]
[connection signal="body_exited" from="PlayerCheck" to="." method="_on_player_check_body_exited"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
